# tools-install

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  utils.py
.ci/: Dockerfile.windows
.github/workflows/: docker-test.yml  tests.yml
tests/: __init__.py  test_config.py  test_utils_archives.py  test_utils_cache.py
tests/test_data/: test_archive.tar.xz
tools/: config.py  config.toml  install-starship.py  install_chocolatey.py  install_starship.py
tools/data/: README.md  starship.toml
tools/utils/: archives.py  cache.py  checksums.py  data.py  downloader.py  misc.py
