[tool.poetry]
name = "tools-install"
version = "0.1.0"
description = "Collection of scripts to install various tools. (cross platform)"
authors = ["Naveen M K <naveen521kk@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
platformdirs = "^2.5.2"
rich = "^12.4.4"
click = "^8.1.3"
requests = "^2.28.1"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
addopts = "--no-cov-on-fail --cov=tools.utils --cov-report term"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
